# stellar-sim

./: CONTRIBUTING.md  Cargo.toml  README.md  continue_issues.sh  create_issues.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: main.rs
