[package]
name = "stellar-sim"
version = "0.1.0"
edition = "2021"
description = "A local Stellar/Soroban transaction simulator with a CLI interface"
license = "Apache-2.0"
repository = "https://github.com/unixfundz/stellar-sim"
keywords = ["stellar", "soroban", "wasm", "simulator", "blockchain"]

[[bin]]
name = "stellar-sim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
wasmparser = "0.116"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
